# cvfoundry

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  compose.yaml  jobs-tailor  pyproject.toml
.github/workflows/: test.yml
assets/: generate-resume.sh
assets/fonts/: OFL.txt
config/: email-policy.json  resume-policy.json
docs/: ONBOARDING.md
profiles/example-software-engineer/: CV.md  Writing-Style.md  resume.json  resume.toml
profiles/john-doe/: CV.md  Writing-Style.md  resume.json  resume.toml
references/: email-contract.md  html-template-contract.md  output-contract.md  tailoring-rules.md  writing-style-rules.md
schemas/: resume-config.schema.json  tailoring-payload-v3.schema.json  theme.schema.json
scripts/: __init__.py  agent_preflight.py  artifact_names.py  assemble_resume.py  check_resume_quality.py  cv_source.py  doctor.py  generate_fit_summary.py  generate_resume.py  install_output_runner.py  jobs_tailor_cli.py  payload_v3.py  pdf_inspection.py  profile_assembly.py  profile_config.py  quarantine_outputs.py  resume_validation.py  runtime_paths.py
src/cvfoundry/: __init__.py  cli.py
templates/profile/: CV.md  Writing-Style.md  resume.json  resume.toml
tests/: test_agent_preflight.py  test_assemble_resume.py  test_check_resume_quality.py  test_cv_source.py  test_generate_fit_summary.py  test_generation_safety.py  test_install_output_runner.py  test_profile_v3.py  test_writer_integration.py
tests/fixtures/: embedded-rust-job.md  project-ranking-expectations.json  rust-backend-job.md  rust-systems-job.md
themes/: classic-serif.json
